syntax = "proto3";

option go_package = "/ygo";
package ygo;

import "google/protobuf/wrappers.proto";

service CardService {
  rpc QueryCard (Resource) returns (Card);
  rpc QueryCards (Resources) returns (Cards);
}

message Resource {
  string ID = 1;
}

message Resources {
  repeated string IDs = 1;
}

message Card {
  string ID = 1;
  string color = 2;
  string name = 3;
  string attribute = 4;
  string effect = 5;
  google.protobuf.StringValue monster_type = 6;
  google.protobuf.UInt32Value attack = 7;
  google.protobuf.UInt32Value defense = 8;
}

message Cards {
	map<string, Card> card_info = 1;
	repeated string unknown_resources = 2;
}
